--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 /* "Anime Gifs Finder" */
 h3 {
-  margin-left: 20px;
+  padding-left: 20px;
+  padding-top: 10px;
+  margin-top: 0px;
 }
 
 /* Red buttons @ top */
